# rosetta-envelope

./: .gitignore  AGENTS.md  CODEX_PROMPTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: positioning.md  roadmap.md  spec.md
examples/: exam_paper.json  invoice.json
examples/demo/: README.md  demo_envelope.json
schemas/: envelope.schema.json
src/rosetta_envelope/: __init__.py  cli.py  core.py  pdf.py  validation.py
tests/: test_core.py  test_pdf.py  test_validation.py
